# chess

./: CMakeLists.txt  README.md
include/: chessboard.h  interface.h
src/: CMakeLists.txt  chessboard.cpp  client.cpp  interface.cpp  server.cpp
tests/: test_chessboard.cpp
